--- a/ytapi/video.html
+++ b/ytapi/video.html
@@ -3,24 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Detay</title>
+    <title>Video Detayları</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://www.youtube.com/iframe_api"></script>
 </head>
 <body>
     <div class="video-container">
-        <div class="player-container" id="player"></div>
+        <!-- Video Player -->
+        <div id="player"></div>
         
-        <div class="video-info">
-            <h1 id="videoTitle"></h1>
-            <div class="meta-data">
-                <span id="viewCount"></span>
-                <span id="publishDate"></span>
-                <span id="likeCount"></span>
+        <!-- Video Detayları -->
+        <div class="video-details">
+            <h1 id="video-title"></h1>
+            <div class="meta-info">
+                <span id="views"></span>
+                <span id="likes"></span>
+                <span id="date"></span>
+            </div>
+            <div class="channel-info">
+                <img id="channel-thumbnail" alt="Kanal resmi">
+                <div>
+                    <h3 id="channel-title"></h3>
+                    <p id="subscribers"></p>
+                </div>
             </div>
             <p id="description"></p>
         </div>
 
-        <button onclick="window.history.back()">Geri Dön</button>
+        <!-- İlşkili Videolar -->
+        <div class="related-videos">
+            <h2>İlgili Videolar</h2>
+            <div id="related-videos-list"></div>
+        </div>
+
+        <button class="back-button" onclick="window.history.back()">← Geri Dön</button>
     </div>
 
     <script src="video.js"></script>
